--- a/views/index.html
+++ b/views/index.html
@@ -86,29 +86,22 @@
     </div>
   </section>
 
-
-
-
   <div class="container" id="contact">
-    <section class="mail">
-      <div class="row w-100">
-        <div class="col-md-8 mx-auto">
-          <h1 class="brand">Join our mailing list</h1>
-          <div class="contact1">
-            <div class="alert" id="fade">Thanks for joining our mailing list!</div>
-            <form id="contactForm">
-              <p>
-                <label>Email Address</label>
-                <input type="email" name="email" id="email" required>
-              </p>
-              <p class="full">
-                <button type="submit">Submit</button>
-              </p>
-            </form>
-          </div>
+    <div class="row w-100">
+      <div class="col-md-8 mx-auto">
+        <h1 class="brand">Join our mailing list</h1>
+        <div class="contact1">
+          <div class="alert" id="fade">Thanks for joining our mailing list!</div>
+          <form id="contactForm">
+            <p>
+              <label>Email Address</label>
+              <input type="email" name="email" id="email" required>
+            </p>
+            <button type="submit">Submit</button>
+          </form>
         </div>
       </div>
-    </section>
+    </div>
   </div>
 
   <div class="bg-color">
@@ -158,52 +151,44 @@
     </div>
   </footer>
 
-  <div class="container">
-    <h1 class="brand">
-      <span>Acme</span> Web Design</h1>
-    <div class="wrapper animated bounceInLeft">
-      <div class="company-info">
-        <h3>Acme Web Design</h3>
-        <ul>
-          <li>
-            <i class="fa fa-road"></i> 44 Something st</li>
-          <li>
-            <i class="fa fa-phone"></i> (555) 555-5555</li>
-          <li>
-            <i class="fa fa-envelope"></i> test@acme.test</li>
-        </ul>
-      </div>
-      <div class="contact">
-        <h3>Email Us</h3>
-        {{msg}}
-        <form method="POST">
-          <p>
-            <label>Name</label>
-            <input type="text" name="name">
-          </p>
-          <p>
-            <label>Company</label>
-            <input type="text" name="company">
-          </p>
-          <p>
-            <label>Email Address</label>
-            <input type="email" name="email">
-          </p>
-          <p>
-            <label>Phone Number</label>
-            <input type="text" name="phone">
-          </p>
-          <p class="full">
-            <label>Message</label>
-            <textarea name="message" rows="5"></textarea>
-          </p>
-          <p class="full">
-            <button type="submit">Submit</button>
-          </p>
-        </form>
+  <!-- <div class="container">
+    <div class="contact">
+      <div class="row w-100">
+        <div class="col-md-8 mx-auto">
+          <h1 class="brand">Join our mailing list</h1>
+          <h3>Email Us</h3>
+          {{msg}}
+          <div class="alert" id="fade">Thanks for joining our mailing list!</div>
+          <form method="POST" id="contactForm">
+            <p>
+              <label>Name</label>
+              <input type="text" name="name">
+            </p>
+            <p>
+              <label>Company</label>
+              <input type="text" name="company">
+            </p>
+            <p>
+              <label>Email Address</label>
+              <input type="email" name="email" id="email" required>
+            </p>
+            <p>
+              <label>Phone Number</label>
+              <input type="text" name="phone">
+            </p>
+            <p class="full">
+              <label>Message</label>
+              <textarea name="message" rows="5"></textarea>
+            </p>
+            <p class="full">
+              <button type="submit">Submit</button>
+            </p>
+          </form>
+        </div>
       </div>
     </div>
   </div>
+  </div> -->
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js " integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN "
     crossorigin="anonymous "></script>
