--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,7 +108,6 @@ header.masthead {
 
 header.masthead .header-content {
   max-width: 500px;
-  margin-bottom: 100px;
   text-align: center;
 }
 
@@ -193,7 +192,7 @@ header.masthead .device-container .screen img {
 }
 
 #email {
-  width: 750px;
+  width: 40vw;
 }
 
 .contact1 form button {
@@ -425,12 +424,41 @@ section.download .badges .badge-link img {
     display: inline-block;
     margin-bottom: 0;
   }
-}
 
-@media (min-width: 768px) {
-  section.download h2 {
+   section.download h2 {
     font-size: 70px;
   }
+
+}
+
+@media (max-width: 768px) {
+  .iphone {
+    position: absolute;
+    z-index: -1500;
+    width: 1%;
+  }
+  .video {
+    margin-top: -42%;
+    
+
+  }
+  .youtubevid {
+    width: 90vw;
+    height: 170px; /* 320px */
+    border: 3px solid white;
+    margin: 0 auto;
+    margin-top: 20%;
+    margin-left: -8.5%;
+
+  }
+
+  h2 {
+  margin-top: -27%;
+  font-size: 30px;
+}
+}
+
+
   
 }
 
