--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 
+<meta name="apple-mobile-web-app-capable" content="yes">
+
 <head>
   <title>spinnr.</title>
   <link rel="shortcut icon" type="image/png" href="../public/img/favicon1.png">
