--- a/views/index.html
+++ b/views/index.html
@@ -15,73 +15,117 @@
 </head>
 
 <div class="container">
-    <div class="row head">
-        <div class="title col-lg-12"></div>
-        <div class="description col-lg-6">
-        Spinnr is a photo to music translator coming soon to iPhone and Android. Try our browser demo below to see how it works.    
+  <div class="row head">
+    <div class="title col-lg-12"></div>
+    <div class="description col-lg-6">
+      Spinnr is a photo to music translator coming soon to iPhone and Android. Try our browser demo below to see how it works.
+    </div>
+    <div class="video col-lg-6">
+      <video id="sampleMovie" src="../public/img/webvideo.mp4" controls></video>
+    </div>
+  </div>
+
+
+
+  <div class="row demo">
+    <div class="tryitout col-lg-12"></div>
+
+
+
+
+    <div class="instructions col-lg-6">
+      <div class id="olid">
+        <ol>
+          <li> Press "Start The Demo" to begin</li>
+          <li> Log into Spotify if prompted</li>
+          <li> Take a photo of an album cover</li>
+          <li> Enjoy your music </li>
+        </ol>
+      </div>
+
+      <a href="/login" class="btn btn-primary">Start the Demo</a>
+
+    </div>
+
+    <div class="stream col-lg-6">
+      <video autoplay playsinline class="handsome"></video>
+      <canvas id="paint"></canvas>
+      <button class="btn btn-primary" onClick="takePhoto()">SPIN IT</button>
+
+    </div>
+
+    <div class="container" id="contact">
+      <div class="row w-100">
+        <div class="col-md-8 mx-auto">
+          <h1 class="brand">Join our mailing list</h1>
+          <div class="contact1">
+            <div class="alert" id="fade">Thanks for joining our mailing list!</div>
+            <form id="contactForm">
+              <p>
+                <label>Email Address</label>
+                <input type="email" name="email" id="email" required>
+              </p>
+              <button type="submit">Submit</button>
+            </form>
+          </div>
         </div>
-        <div class="video col-lg-6">
-          <video id="sampleMovie" src="../public/img/webvideo.mp4" controls></video>
-        </div>
+      </div>
     </div>
 
 
-
-    <div class="row demo">
-      <div class="tryitout col-lg-12"></div>
-  
-
-
-    
-         <div class="instructions col-lg-6">
-         <div class id = "olid">
-          <ol>
-            <li> Press "Start The Demo" to begin</li>
-            <li> Log into Spotify if prompted</li>
-            <li> Take a photo of an album cover</li>
-            <li> Enjoy your music </li>
-          </ol>
-        </div>
-
-          <a href="/login" class="btn btn-primary">Start the Demo</a>
-              
-        </div>
-
-             <div class="stream col-lg-6">
-  <video autoplay playsinline class="handsome"></video>
-  <canvas id="paint"></canvas>
-    <button class = "btn btn-primary" onClick="takePhoto()">SPIN IT</button>
-
-         </div>
-
-
-
-
-    </div>
-    <div class="row kickstarter">
-        <div class="mailinglist col-xs-12"></div>
-    </div>
-    <div class="row social">
-        <div class="facebook col-xs-6 col-md-3"></div>
-        <div class="twitter col-xs-6 col-md-3"></div>
-        <div class="instagram col-xs-6 col-md-3"></div>
-        <div class="email col-xs-6 col-md-3"></div>
-    </div>
-    <div class="row footer">
-        <div class="col-xs-12"></div>
-    </div>
+  </div>
+  <div class="row kickstarter">
+    <div class="mailinglist col-xs-12"></div>
+  </div>
+  <div class="row social">
+    <div class="facebook col-xs-6 col-md-3"></div>
+    <div class="twitter col-xs-6 col-md-3"></div>
+    <div class="instagram col-xs-6 col-md-3"></div>
+    <div class="email col-xs-6 col-md-3"></div>
+  </div>
+  <div class="row footer">
+    <div class="col-xs-12"></div>
+  </div>
 </div>
 
-<script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+<div class="bg-color">
+  <section class="contact bg-color">
+    <div class="container">
+      <h2>Follow Us!</h2>
+      <ul class="list-inline list-social">
+        <li class="list-inline-item social-twitter">
+          <a href="https://www.twitter.com/spinnrapp/" target="_blank">
+            <i class="fa fa-twitter"></i>
+          </a>
+        </li>
+        <li class="list-inline-item social-facebook">
+          <a href="https://www.facebook.com/spinnrapp/" target="_blank">
+            <i class="fa fa-facebook"></i>
+          </a>
+        </li>
+        <li class="list-inline-item social-instagram">
+          <a href="https://www.instagram.com/spinnrapp/" target="_blank">
+            <i class="fa fa-instagram"></i>
+          </a>
+        </li>
+        <li class="list-inline-item social-mail">
+          <a href="mailto:spinnrapp@gmail.com">
+            <i class="fa fa-envelope"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </section>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q "
-    crossorigin="anonymous "></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl "
-    crossorigin="anonymous "></script>
-  <script src="https://www.gstatic.com/firebasejs/5.0.2/firebase.js"></script>
-  <script src="../public/js/main.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q "
+  crossorigin="anonymous "></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl "
+  crossorigin="anonymous "></script>
+<script src="https://www.gstatic.com/firebasejs/5.0.2/firebase.js"></script>
+<script src="../public/js/main.js"></script>
 </body>
 
 </html>
