--- a/views/index.html
+++ b/views/index.html
@@ -14,81 +14,81 @@
   <link href="../public/css/style.css" rel="stylesheet" />
 </head>
 
+
+<div id="navbar">
+  <h4 class="brand">Join our mailing list to get updates about our<img class="kicklogo" src="https://d3mlfyygrfdi2i.cloudfront.net/kickstarter-logo-color.png">  and more.</h4>
+  <form id="contactForm">
+              
+                <input placeholder="example@email.com" type="email" name="email" id="email" required>
+              
+              <button type="submit" class="submit">Submit</button>
+  </form>
+</div>
+
+
 <div class="container">
   <div class="row head">
     <div class="title col-lg-12"></div>
-    <div class="description col-lg-6">
-      Spinnr is a photo to music translator coming soon to iPhone and Android. Try our browser demo below to see how it works.
+    <div class="description col-lg-12">
+      <div class = "translator"><h1>
+      Spinnr is a photo to music translator coming soon to iPhone and Android. Take a photo of an album cover, and listen in Spotify. Try our browser demo below to see it in action.</h1>
+      <a href="/login" class="btn btn-primary">Start the Demo</a>
+      <h6>You will be prompted to log into Spotify.</h6>
     </div>
-    <div class="video col-lg-6">
+    </div>
+    <!-- <div class="video col-lg-6">
       <video id="sampleMovie" src="../public/img/webvideo.mp4" controls></video>
-    </div>
+    </div> -->
   </div>
 
 
 
-  <div class="row demo">
+
+
+<!--   <div class="row demo">
     <div class="tryitout col-lg-12"></div>
 
 
 
 
-    <div class="instructions col-lg-6">
-      <div class id="olid">
-        <ol>
-          <li> Press "Start The Demo" to begin</li>
-          <li> Log into Spotify if prompted</li>
-          <li> Take a photo of an album cover</li>
-          <li> Enjoy your music </li>
-        </ol>
+      <div class="instructions col-lg-6">
+        <div class id="olid">
+          <ol>
+            <li> Press "Start The Demo" to begin</li>
+            <li> Log into Spotify if prompted</li>
+            <li> Take a photo of an album cover</li>
+            <li> Enjoy your music </li>
+          </ol>
+        </div>
+
+        <a href="/login" class="btn btn-primary">Start the Demo</a>
+
       </div>
-
-      <a href="/login" class="btn btn-primary">Start the Demo</a>
-
-    </div>
 
     <div class="stream col-lg-6">
       <video autoplay playsinline class="handsome"></video>
       <canvas id="paint"></canvas>
       <button class="btn btn-primary" onClick="takePhoto()">SPIN IT</button>
 
-    </div>
-
-    <div class="container" id="contact">
-      <div class="row w-100">
-        <div class="col-md-8 mx-auto">
-          <h1 class="brand">Join our mailing list</h1>
-          <div class="contact1">
-            <div class="alert" id="fade">Thanks for joining our mailing list!</div>
-            <form id="contactForm">
-              <p>
-                <label>Email Address</label>
-                <input type="email" name="email" id="email" required>
-              </p>
-              <button type="submit">Submit</button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
+    </div> -->
 
 
-  </div>
-  <div class="row kickstarter">
-    <div class="mailinglist col-xs-12"></div>
-  </div>
-  <div class="row social">
-    <div class="facebook col-xs-6 col-md-3"></div>
-    <div class="twitter col-xs-6 col-md-3"></div>
-    <div class="instagram col-xs-6 col-md-3"></div>
-    <div class="email col-xs-6 col-md-3"></div>
+
+
+
+
+  <div class="row social justify-content-center">
+    <div class="email col-xs-12 col-md-1"><i class="fa fa-envelope"></i></div>
+    <div class="facebook col-xs-12 col-md-1"><i class="fa fa-facebook"></i>  </div>
+    <div class="twitter col-xs-12 col-md-1"> <i class="fa fa-twitter"></i></div>
+    <!-- <div class="email col-xs-12 col-md-2"><i class="fa fa-envelope"></i></div> -->
   </div>
   <div class="row footer">
-    <div class="col-xs-12"></div>
+    <div class="col-xs-12 col-lg-12">Copyright ©2018 Spinnr Inc.<br>All Rights Reserved</div>
   </div>
 </div>
 
-<div class="bg-color">
+<!-- <div class="bg-color">
   <section class="contact bg-color">
     <div class="container">
       <h2>Follow Us!</h2>
@@ -117,6 +117,28 @@
     </div>
   </section>
 </div>
+ -->
+
+
+<!-- NAVBAR SCRIPT -->
+
+<script>
+window.onscroll = function() {myFunction()};
+
+var navbar = document.getElementById("navbar");
+var sticky = navbar.offsetTop;
+
+function myFunction() {
+  if (window.pageYOffset >= sticky) {
+    navbar.classList.add("sticky")
+  } else {
+    navbar.classList.remove("sticky");
+  }
+}
+</script>
+
+
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
