fixed submit and placeholder

--- a/views/index.html
+++ b/views/index.html
@@ -24,8 +24,8 @@
       <img class="kicklogo" src="https://d3mlfyygrfdi2i.cloudfront.net/kickstarter-logo-color.png"> and more.</h4>
     <form id="contactForm" class="resetForm">
 
-      <input placeholder="example@email.com" onfocus="this.placeholder=''" onblur="this.placeholder='Type'" type="email" name="email"
-        id="email" required>
+      <input placeholder="example@email.com" onfocus="this.placeholder=''" onblur="this.placeholder='Thanks for joining our mailing list'"
+        type="email" name="email" id="email" required>
 
       <button type="submit" class="submit">Submit</button>
     </form>
