Success Message on Email Form

--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
 
 <body onLoad="window.scroll(0, 1)">
 
-
+  <div id="navbar2"></div>
   <div id="navbar">
     <h4 class="brand">Join our mailing list to get updates about our
       <img class="kicklogo" src="https://d3mlfyygrfdi2i.cloudfront.net/kickstarter-logo-color.png"> and more.</h4>
