--- a/views/demo.html
+++ b/views/demo.html
@@ -34,23 +34,32 @@
 
   <div class="container">
 
-
-
-    <div class="row head">
+  <div class="row head">
       <div class="title col-lg-12"></div>
-      <div class="description col-lg-12">
-        <div class="translator">
-          <h1>
-            Spinnr is a photo to music translator coming soon to iPhone and Android. Take a photo of an album cover, and listen in Spotify.
-            Try our browser demo below to see it in action.</h1>
-          <a href="/demo" class="demoBtn btn btn-primary">Start Demo</a>
-          <h6>You will be prompted to log into Spotify.</h6>
-        </div>
-      </div>
-      <!-- <div class="video col-lg-6">
-      <video id="sampleMovie" src="../public/img/webvideo.mp4" controls></video>
-    </div> -->
     </div>
+
+    <div class="row description justify-content-center">
+
+      <div class="ins col-xs-12 col-md-4">
+      </div>
+      <div class="stream col-xs-12 col-md-4">
+
+      <video autoplay playsinline class="handsome"></video>
+      <canvas id="paint"></canvas>
+      <button class = "btn btn-primary spinBtn" onClick="takePhoto()">SPIN IT</button>
+
+      </div>
+      <div class="info col-xs-12 col-md-4">
+      </div>
+      <!-- <div class="email col-xs-12 col-md-2"><i class="fa fa-envelope"></i></div> -->
+    </div>
+
+
+
+    </div>
+
+
+
 
 
 
