pulling off heroku

--- a/views/demo.html
+++ b/views/demo.html
@@ -38,19 +38,18 @@
       <div class="title col-lg-12"></div>
     </div>
 
-    <div class="row description justify-content-center">
+    <div class="row description justify-content-center align-middle">
 
-      <div class="ins col-xs-12 col-md-4">
+      <div class="ins col-xs-12 col-md-6">
       </div>
-      <div class="stream col-xs-12 col-md-4">
+      <div class="stream col-xs-12 col-md-6">
 
-      <video autoplay playsinline class="handsome"></video>
+      <video autoplay playsinline class="handsome" id="myVideo"></video>
       <canvas id="paint"></canvas>
-      <button class = "btn btn-primary spinBtn" onClick="takePhoto()">SPIN IT</button>
+      <button class = "btn btn-primary" id="spinBtn" onClick="takePhoto()">SPIN IT</button>
 
       </div>
-      <div class="info col-xs-12 col-md-4">
-      </div>
+     
       <!-- <div class="email col-xs-12 col-md-2"><i class="fa fa-envelope"></i></div> -->
     </div>
 
