--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,12 +39,7 @@ body {
 
 }
 
-#sampleMovie {
-    width: 100%;
-    height: 80%;
-    align-content: center;
 
-}
 
 .description {
     color: white;
@@ -64,6 +59,7 @@ body {
 
 .stream {
     height: 60vh;
+    background: rgba(34, 34, 34, .4);
     
 }
 
@@ -92,7 +88,7 @@ body {
     background-color: #1DB954;
 }
 
-.spinBtn {
+#spinBtn {
     width: 40%;
     background-color: #ea4049;
     margin: 0 auto;
@@ -101,7 +97,7 @@ body {
     font-size: 100%;
 }
 
-.spinBtn:hover {
+#spinBtn:hover {
     width: 40%;
     background-color: #1DB954;
 }
@@ -196,26 +192,24 @@ h1 {
 }
 
 .ins {
-background-color: green;
+
 }
 
 
-.info {
-background-color: red;
-}
 
 
 
 /* LIVE DEMO STYLING*/
 
 .handsome, #paint {
-    width: 100%;
-    margin-top: 5vh;
-}
+    width: 70%;
+    margin-top: 2%; 
+    position: relative;
+  }
 
 
 #paint {
-  width: 0%;
+ width: 0%;
 }
 
 
