--- a/views/demo.html
+++ b/views/demo.html
@@ -46,6 +46,9 @@
 
       <video autoplay playsinline class="handsome" id="myVideo"></video>
       <canvas id="paint"></canvas>
+      
+    <div id = "loading"></div>
+
       <button class = "btn btn-primary" id="spinBtn" onClick="takePhoto()">SPIN IT</button>
 
       </div>
