--- a/views/demo.html
+++ b/views/demo.html
@@ -48,6 +48,17 @@
       <canvas id="paint"></canvas>
       
     <div id = "loading"></div>
+    
+    <div id = "loaded">
+      <h6 id="weThink"></h6>
+
+        <div id="albumPreview"></div>
+        <h4 id ="albumTitle"></h4>
+        <h3 id ="bandName"></h4>
+        <a href="" id="launchBtn" class = "btn btn-primary">Listen with Spotify</a>
+        
+
+    </div>
 
       <button class = "btn btn-primary" id="spinBtn" onClick="takePhoto()">SPIN IT</button>
 
