--- a/views/index.html
+++ b/views/index.html
@@ -43,7 +43,7 @@
           <h1>
             Spinnr is a photo to music translator coming soon to iPhone and Android. Take a photo of an album cover, and listen in Spotify.
             Try our browser demo below to see it in action.</h1>
-          <a href="" class="demoBtn btn btn-primary">Start Demo</a>
+          <a href="/demo" class="demoBtn btn btn-primary">Start Demo</a>
           <h6>You will be prompted to log into Spotify.</h6>
         </div>
       </div>
@@ -149,7 +149,7 @@
 
     function myFunction() {
       if (window.pageYOffset >= sticky) {
-        navbar.classList.add("sticky");
+        navbar.classList.add("sticky")
       } else {
         navbar.classList.remove("sticky");
       }
