--- a/public/css/style.css
+++ b/public/css/style.css
@@ -202,7 +202,6 @@ h1 {
 }
 
 .handsome {
-  border: 2px solid;
   width: 80%;
   height: 80%;
   margin: auto;
@@ -295,6 +294,8 @@ form {
 
 #loaded {
   margin: auto;
+  display: none;
+
 }
 
 
@@ -310,4 +311,8 @@ form {
  
 #bandName {
   display: block;
+}
+
+#launchBtn {
+  background-color: #1DB954;
 }
