adding media queries

--- a/views/index.html
+++ b/views/index.html
@@ -91,13 +91,19 @@
     <div class="row social justify-content-center">
 
       <div class="email col-xs-12 col-md-1">
-        <i class="fa fa-envelope"></i>
+        <a href="mailto:spinnrapp@gmail.com">
+          <i class="fa fa-envelope"></i>
       </div>
       <div class="facebook col-xs-12 col-md-1">
-        <i class="fa fa-facebook"></i>
+        <li class="list-inline-item">
+          <a href="https://www.facebook.com/spinnrapp/" target="_blank">
+            <i class="fa fa-facebook"></i>
+          </a>
+        </li>
       </div>
       <div class="twitter col-xs-12 col-md-1">
-        <i class="fa fa-twitter"></i>
+        <a href="https://www.twitter.com/spinnrapp/" target="_blank">
+          <i class="fa fa-twitter"></i>
       </div>
       <!-- <div class="email col-xs-12 col-md-2"><i class="fa fa-envelope"></i></div> -->
     </div>
