--- a/views/demo.html
+++ b/views/demo.html
@@ -41,6 +41,21 @@
     <div class="row description justify-content-center align-middle">
 
       <div class="ins col-xs-12 col-md-6">
+
+        <ol id="instructions">
+          <li>Make sure you give your browser permission to take photos.</li>
+          <li>Put some album art in front of the camera and press the "Spin It" button.</li>
+          <li>Be patient while our wizards analyze your photo.</li>
+         <li>Behold the power of Spinnr! Press the "Listen in Spotify" button to get your groove on.</li>
+      </ol>
+
+
+
+
+
+
+
+
       </div>
       <div class="stream col-xs-12 col-md-6">
 
